1) 총알 및 근접 무기 생성 방식 분리 2) 총알 사용 시 부모 개체와 거리가 멀어진 경우, 오브젝트 소멸 로직 추가

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -103,8 +103,10 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\Scripts\03_JsonCtrl\DataSpawn.cs" />
     <Compile Include="Assets\Scripts\07_Attack\Bullet.cs" />
-    <Compile Include="Assets\Scripts\07_Attack\Weapon.cs" />
+    <Compile Include="Assets\Scripts\07_Attack\RangeWeapon.cs" />
     <Compile Include="Assets\Scripts\06_EnemyCtrl\EnemyScanner.cs" />
+    <Compile Include="Assets\Scripts\07_Attack\Melee.cs" />
+    <Compile Include="Assets\Scripts\07_Attack\MeleeWeapon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
