--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,12 +70,12 @@
     <Compile Include="Assets\Scripts\08_HUD\FollowCamera.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshProFloatingText.cs" />
-    <Compile Include="Assets\Scripts\07_Attack\Weapon.cs" />
+    <Compile Include="Assets\Scripts\07_Attack\WeaponCtrl.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_UiFrameRateCounter.cs" />
     <Compile Include="Assets\Scripts\06_EnemyCtrl\Enemy.cs" />
-    <Compile Include="Assets\Scripts\09_Item\Gear.cs" />
+    <Compile Include="Assets\Scripts\09_Item\Perk.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\01_BtnCtrl\LoginManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMPro_InstructionOverlay.cs" />
@@ -97,13 +97,12 @@
     <Compile Include="Assets\Scripts\02_TextCtrl\TextFlash.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
     <Compile Include="Assets\Scripts\08_HUD\HUDDefault.cs" />
-    <Compile Include="Assets\Scripts\Data\ItemData.cs" />
+    <Compile Include="Assets\Scripts\Data\WeaponJsonData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventHandler.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
     <Compile Include="Assets\Scripts\08_HUD\LevelUp.cs" />
     <Compile Include="Assets\Scripts\06_EnemyCtrl\EnemySpawnManager.cs" />
-    <Compile Include="Assets\Scripts\Data\EnemyData.cs" />
-    <Compile Include="Assets\Scripts\Data\JsonCtrl.cs" />
+    <Compile Include="Assets\Scripts\Data\EnemyJsonData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
@@ -113,6 +112,12 @@
     <Compile Include="Assets\Scripts\04_PlayerCtrl\Player.cs" />
     <Compile Include="Assets\Scripts\07_Attack\Range.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
+    <Compile Include="Assets\Scripts\Data\ItemCtrlData.cs" />
+    <Compile Include="Assets\Scripts\Enum\WeaponFunc.cs" />
+    <Compile Include="Assets\Scripts\Data\WeaponData.cs" />
+    <Compile Include="Assets\Scripts\Data\PerkJsonData.cs" />
+    <Compile Include="Assets\Scripts\Data\PerkData.cs" />
+    <Compile Include="Assets\Scripts\Data\PlayerData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
