게임 시작 및 게임종료 HUD 및 로직 추가

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Assets\Scripts\Data\WeaponData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\Scripts\Enum\WeaponFunc.cs" />
+    <Compile Include="Assets\Scripts\08_HUD\HUDResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
