1. 다국어 지원 로직 추가 2. 볼륨 제어 로직 추가

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -216,6 +216,8 @@
     <Compile Include="Assets\Scripts\Data\WeaponData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\Scripts\Enum\WeaponFunc.cs" />
+    <Compile Include="Assets\Scripts\Data\TextJsonData.cs" />
+    <Compile Include="Assets\Scripts\Data\SettingData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
