충돌 판정 업데이트.
추후 디버프 옵션 추가 필요.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\Scripts\Enum\WeaponFunc.cs" />
     <Compile Include="Assets\Scripts\Data\LevelJsonData.cs" />
+    <Compile Include="Assets\Scripts\07_Attack\FieldObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
