PowerUp HUD 구현 완료!

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Assets\Scripts\Data\WeaponData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\Scripts\General\FuncWeapon.cs" />
+    <Compile Include="Assets\Scripts\08_HUD\HUDPanelPowerUpDisplay.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
