해금 로직 추가

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -122,7 +122,8 @@
     <Compile Include="Assets\Scripts\08_HUD\HUDBtnItem.cs" />
     <Compile Include="Assets\Scripts\08_HUD\HUDBtnPlayer.cs" />
     <Compile Include="Assets\Scripts\08_HUD\HUDGameStart.cs" />
-    <Compile Include="Assets\Scripts\00_Manager\AchiveManager.cs" />
+    <Compile Include="Assets\Scripts\08_HUD\HUDAchive.cs" />
+    <Compile Include="Assets\Scripts\Data\AchiveJsonData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
